# identity-python

./: .coveragerc  .gitignore  .travis.yml  Changelog.rst  LICENSE  Pipfile  README.md  README.rst  mypy.ini  publish.sh  pyproject.toml  run-ci.py  setup.py  tbump.toml
.github/workflows/: checks.yml  deploy.yml  install.yml  linters.yml  safety.yml  tests.yml
examples/: .gitignore  README.rst  config-app.json.example  config-trustchain.json.example
examples/flask/: server.py
tanker_identity/identity/: __init__.py
tanker_identity/test/: conftest.py  helpers.py  test_crypto.py  test_identity.py  test_user_token.py
tankersdk/crypto/: __init__.py
tankersdk/test/: helpers.py  test_crypto.py  test_user_token.py
tankersdk/usertoken/: __init__.py
tankersdk_identity/: __init__.py
tankersdk_identity/crypto/: __init__.py
tankersdk_identity/test/: conftest.py  helpers.py  test_crypto.py  test_identity.py  test_user_token.py  test_vectors.py
