[tool.poetry]
name = "tankersdk-identity"
version = "0.0.0"
description = "Tanker identity library"
authors = ["Tanker team"]
homepage = "https://github.com/TankerHQ/identity-python"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyNacl = "1.5.0"

[tool.poetry.dev-dependencies]
black = "22.3.0"
pytest = "7.2.0"
pytest-cov = "4.0.0"
mypy = "1.5"
safety = "2.3.5"
tbump = "6.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
